# snell-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  build.rs  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: loopback.rs  protocol.rs  udp_loopback.rs
scripts/: prepare-release.sh
src/: client.rs  config.rs  error.rs  keepalive.rs  lib.rs  main.rs  parse.rs  tcp_brutal.rs  test_support.rs  timeout.rs
src/client/: mod.rs
src/config/: tests.rs
src/framed/: buffer.rs  mod.rs  reader.rs  tests.rs  writer.rs
src/framed/writer/: v4.rs  v6.rs
src/net/: connect.rs  dns.rs  tcp_brutal.rs
src/protocol/: address.rs  crypto.rs  frame_v4.rs  frame_v6.rs  header.rs  mod.rs  nonce.rs  psk.rs  quic_proxy.rs  random.rs  request.rs  socks5.rs  udp.rs  version.rs
src/protocol/snell/: common.rs  mod.rs  salt.rs  tests.rs  v4.rs  version.rs
src/protocol/snell/crypto/: expand.rs  kdf.rs  mod.rs  prf.rs  splitmix.rs
src/protocol/snell/profile/: fill.rs  mix.rs  mod.rs  sizing.rs
src/protocol/snell/v6/: mod.rs  raw.rs  shaped.rs  unshaped.rs
src/protocol/v4/: frame.rs
src/protocol/v4/frame/: tests.rs
src/protocol/v6/: chunk.rs  frame.rs  mod.rs  profile.rs  replay.rs  salt.rs  tests.rs
src/protocol/v6/profile/: tests.rs
src/proxy/outbound/: direct.rs  mod.rs  quic.rs  snell.rs  socks5.rs  tcp.rs  udp.rs
src/proxy/outbound/snell/: tests.rs
src/proxy/outbound/socks5/: tests.rs
src/proxy/snell/: server.rs  tcp.rs
src/proxy/snell/server/: tests.rs
src/proxy/socks5/: inbound.rs  udp.rs
src/proxy/socks5/inbound/: tests.rs
src/relay/: activity.rs  quic_proxy.rs  snell_tcp.rs  tcp.rs
src/relay/quic_proxy/: tests.rs
src/relay/tcp/: client.rs  driver.rs  handshake.rs  mod.rs  pool.rs  transport.rs
src/relay/udp/: association.rs  io.rs  mod.rs  socket.rs
src/relay/udp/association/: tests.rs
src/relay/udp/io/: tests.rs
src/relay/udp/outbound/: tests.rs
src/server/: listener.rs  mod.rs  outbound.rs  shutdown.rs  tests.rs
src/service/: dns.rs  outbound.rs  test_support.rs
src/service/inbound/: snell.rs  socks5.rs
src/service/outbound/: direct.rs  quic.rs  snell.rs  socks5.rs  tcp.rs  udp.rs
src/service/runtime/: client.rs  config.rs  lifecycle.rs  net.rs  server.rs  tcp_brutal.rs
src/service/session/: quic_proxy.rs  socks5_udp.rs  udp_association.rs  udp_io.rs  udp_outbound.rs  udp_socket.rs
src/session/: quic_proxy.rs  reuse.rs  tcp.rs
src/session/quic_proxy/: tests.rs
src/session/reuse/: tests.rs
src/session/tcp/: relay.rs  tests.rs
src/session/udp/: association.rs  io.rs  outbound.rs  socket.rs  stream.rs
src/session/udp/association/: tests.rs
src/session/udp/io/: tests.rs
src/session/udp/outbound/: tests.rs
src/session/udp/socket/: tests.rs
src/session/udp/stream/: tests.rs
src/transport/: reuse.rs  tcp.rs  tcp_stream.rs  tokio_io.rs  udp_stream.rs
src/transport/reuse/: tests.rs
src/transport/tcp/: tests.rs
src/transport/udp/: stream.rs
src/transport/udp/stream/: tests.rs
