[package]
name = "snell-rs"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
# Cryptography
# ring: AES-128-GCM (record-layer hot path, ring uses optimized ASM).
#       ring's digest module only supports SHA-1/SHA-2 — BLAKE2 is deliberately
#       not supported (briansmith/ring#169), so BLAKE2b lives in the `blake2` crate.
ring = "0.17"
argon2 = "0.5" # KDF: Argon2id (unpacked fn 0x39a90; libsodium crypto_pwhash)
blake2 = "0.10" # BLAKE2b-256 profile secret (unpacked fn 0x39d90)
rand = "0.8"

# Runtime
# tokio: the runtime for the (forthcoming) transport/driver layer. The codec
#        layer (protocol/socks5, protocol/snell) is pure-synchronous and does
#        not depend on any runtime. Only `io-util`+`net`+`rt`+`time` are pulled
#        in for now — add features (e.g. `macros`, `rt-multi-thread`) when the
#        driver/inbound/service layers land.
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

# CLI/config parsing
clap = { version = "4", features = ["derive"] }
rust-ini = "0.21"

# Async helpers — `ready!` macro used by poll-based driver state machines.
futures = "0.3"

# Data structures
bytes = "1.0"
lru_time_cache = "0.11"

# Error handling
thiserror = "2.0"

# Logging — used by protocol::crypto::kdf (tracing::trace on key derivation).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hex = "0.4"
