[package]
name = "snell-rs"
version = "0.1.3"
edition = "2024"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
strip = true

[dependencies]
aws-lc-rs = { version = "1", features = ["prebuilt-nasm"] }
argon2 = "0.5"
blake2 = "0.10"
rand = "0.8"
compio = { version = "0.19", features = [
  "dispatcher",
  "iocp-global",
  "macros",
  "net",
  "time",
  "bytes",
] }
mimalloc = { version = "0.1", default-features = false }
clap = { version = "4", features = ["derive"] }
rust-ini = "0.21"
futures = "0.3"
bytes = "1.0"
socket2 = "0.6"
lru_time_cache = "0.11"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["net"] }

[dev-dependencies]
hex = "0.4"
